AUTOMAKE_OPTIONS = gnu

SUBDIRS = src

man_MANS = doc/medusa.1

EXTRA_DIST = doc/medusa.1 doc/*.html misc/libssh2/libssh2-banner-wait.diff misc/rdesktop/rdp-brute-force.diff misc/net-analyzer/medusa-1.3.ebuild misc/net-libs/README misc/net-libs/libssh2-0.13.ebuild misc/net-libs/files/libssh2-0.13-banner-wait.patch misc/net-fs/ncpfs/ncpfs-2.2.6.ebuild.diff

_SOURCES = acconfig.h
